# romea-localisation-utils

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_localisation.rosinstall  romea_localisation_utils.repos
include/romea_localisation_utils/conversions/: localisation_status_conversions.hpp  observation_angular_speed_conversions.hpp  observation_attitude_conversions.hpp  observation_conversions.hpp  observation_course_conversions.hpp  observation_linear_speed_conversions.hpp  observation_linear_speeds_conversions.hpp  observation_pose_conversions.hpp  observation_position_conversions.hpp  observation_range_conversions.hpp  observation_twist_conversions.hpp
include/romea_localisation_utils/filter/: localisation_factory.hpp  localisation_parameters.hpp  localisation_updater_interface.hpp  localisation_updater_interface_base.hpp
romea_localisation_msgs/: CMakeLists.txt  package.xml
romea_localisation_msgs/msg/: LocalisationStatus.msg  ObservationAngularSpeed.msg  ObservationAngularSpeedStamped.msg  ObservationAttitude.msg  ObservationAttitudeStamped.msg  ObservationCourse.msg  ObservationCourseStamped.msg  ObservationPose2D.msg  ObservationPose2DStamped.msg  ObservationPosition2D.msg  ObservationPosition2DStamped.msg  ObservationRange.msg  ObservationRangeStamped.msg  ObservationTwist2D.msg  ObservationTwist2DStamped.msg
romea_localisation_msgs/srv/: CheckLocalisationStatus.srv
romea_localisation_utils/: CMakeLists.txt  package.xml
romea_localisation_utils/include/romea_localisation_utils/conversions/: localisation_status_conversions.hpp  observation_angular_speed_conversions.hpp  observation_attitude_conversions.hpp  observation_conversions.hpp  observation_course_conversions.hpp  observation_linear_speed_conversions.hpp  observation_linear_speeds_conversions.hpp  observation_pose_conversions.hpp  observation_position_conversions.hpp  observation_range_conversions.hpp  observation_twist_conversions.hpp
romea_localisation_utils/include/romea_localisation_utils/filter/: localisation_application_base.hpp  localisation_application_nodelet_base.hpp  localisation_factory.hpp  localisation_filter_factory.hpp  localisation_filter_parameters.hpp.autosave  localisation_filter_params.hpp  localisation_parameters.hpp  localisation_updater_interface.hpp  localisation_updater_interface_base.hpp  localisation_updater_plugin.hpp  localisation_updater_plugin_base.hpp
romea_localisation_utils/src/conversions/: localisation_status_conversions.cpp  observation_angular_speed_conversions.cpp  observation_attitude_conversions.cpp  observation_conversions.cpp  observation_course_conversions.cpp  observation_linear_speed_conversions.cpp  observation_linear_speeds_conversions.cpp  observation_pose_conversions.cpp  observation_position_conversions.cpp  observation_range_conversions.cpp  observation_twist_conversions.cpp
romea_localisation_utils/src/filter/: localisation_application_nodelet_base.cpp  localisation_filter_params.cpp  localisation_parameters.cpp
romea_localisation_utils/test/: CMakeLists.txt  test_localisation_filter_parameters.cpp  test_localisation_parameters.cpp  test_localisation_parameters.yaml  test_observation_angular_speed_conversions.cpp  test_observation_attitude_conversions.cpp  test_observation_course_conversions.cpp  test_observation_linear_speed_conversions.cpp  test_observation_linear_speeds_conversions.cpp  test_observation_pose_conversions.cpp  test_observation_position_conversions.cpp  test_observation_range_conversions.cpp  test_observation_twist_conversions.cpp  test_utils.hpp
src/conversions/: localisation_status_conversions.cpp  observation_angular_speed_conversions.cpp  observation_attitude_conversions.cpp  observation_course_conversions.cpp  observation_linear_speed_conversions.cpp  observation_linear_speeds_conversions.cpp  observation_pose_conversions.cpp  observation_position_conversions.cpp  observation_range_conversions.cpp  observation_twist_conversions.cpp
src/filter/: localisation_parameters.cpp
test/: CMakeLists.txt  test_localisation_parameters.cpp  test_localisation_parameters.yaml  test_observation_angular_speed_conversions.cpp  test_observation_attitude_conversions.cpp  test_observation_course_conversions.cpp  test_observation_linear_speed_conversions.cpp  test_observation_linear_speeds_conversions.cpp  test_observation_pose_conversions.cpp  test_observation_position_conversions.cpp  test_observation_range_conversions.cpp  test_observation_twist_conversions.cpp  test_utils.hpp
